Preventing from images too small

--- a/src/styles/admin/Admin.module.css
+++ b/src/styles/admin/Admin.module.css
@@ -74,7 +74,25 @@ padding: 1em 0 2em;
     letter-spacing: 3px;
     padding-bottom: 1em;
     color: var(--color-dark);
-    font-size: 0.9em;
+    font-size: var(--font-size);
+}
+
+h2.noPadding {
+    padding-bottom: 0;
+}
+
+.info {
+    width: 350px;
+    margin: 2em auto;
+    padding: 1em;
+    text-align: left;
+    background-color: var(--color-light);
+}
+.info summary {
+    cursor: pointer;
+}
+.info p {
+    padding: 1em;
 }
 
 .imageWrapper {
